# ESPMonitorUltra

./: README.md
AIDA64InfoReader/: AIDA64InfoReader.sln  LICENSE  README.md  ssh  ssh.pub
AIDA64InfoReader/AIDA64InfoReader/: AIDA64InfoReader.csproj  Form1.Designer.cs  Form1.cs  Form1.resx  Program.cs  app.manifest  packages.config
code/: platformio.ini  user_huge_app.csv
code/include/: NTP.h  setWifi.h
code/lib/: lv_conf.h
code/src/: main.cpp  main.txt
ui_pro/page1_start/: page1_start.sll  page1_start.spj
ui_pro/page2_weather/: page2_weather.sll  page2_weather.spj
ui_pro/page2_weather/output/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_comp_hook.c  ui_events.h  ui_font_Font102px.c  ui_font_Font18px.c  ui_font_Font38px.c  ui_helpers.c  ui_helpers.h  ui_img_images_hub_png.c  ui_img_images_location_png.c  ui_img_images_m00_png.c  ui_img_images_m01_png.c  ui_img_images_m02_png.c  ui_img_images_m03_png.c  ui_img_images_m04_png.c  ui_img_images_m05_png.c  ui_img_images_m06_png.c  ui_img_images_m07_png.c  ui_img_images_m08_png.c  ui_img_images_m09_png.c  ui_img_images_m10_png.c  ui_img_images_m11_png.c  ui_img_images_m12_png.c  ui_img_images_m13_png.c  ui_img_images_m14_png.c  ui_img_images_m15_png.c  ui_img_images_m16_png.c  ui_img_images_m17_png.c  ui_img_images_temp_png.c  ui_page2_screen_weather.c
ui_pro/page3_monitor/: page3_monitor.sll  page3_monitor.spj
ui_pro/page3_monitor/output/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_comp_hook.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_page3_screen_monitor.c
ui_pro/page5_main/: page5_main.sll  (+1 more)
(+119 files in other folders)
